# archierobot

./: CMakeLists.txt  LICENSE.md  README.md  manually_publish_JointTrajectory_message_in_terminal.txt  package.xml
ArduinoMega/Test_on_Mega/: platformio.ini
ArduinoMega/Test_on_Mega/src/: main.cpp
arduino_due/firmware/ardu_due_leg_firmware/: platformio.ini
arduino_due/firmware/ardu_due_leg_firmware/lib/ros_lib/ros/: node_handle.h
arduino_due/firmware/ardu_due_leg_firmware/src/: main.cpp
arduino_due/firmware_due/: platformio.ini
arduino_due/firmware_due/lib/config/: firmware_config.h
arduino_due/firmware_due/lib/imu/: MPU9250.cpp
arduino_due/firmware_due/src/: main.cpp
launch/: rosserial_ardu_due.launch  test2.launch
teensy32/firmware_32/: platformio.ini
teensy32/firmware_32/lib/config/: firmware_config.h
teensy32/firmware_32/lib/imu/: MPU9250.cpp
teensy32/firmware_32/lib/ros_lib/archie_msgs/: Imu.h
teensy32/firmware_32/src/: main.cpp
teensy36/firmware/: platformio.ini
teensy36/firmware/lib/config/: firmware_config.h
teensy36/firmware/src/: main.cpp
teensy36/firmware/test/: T.CPP
